# ros2_robolab

./: .gitignore  .gitmodules  README.md  compute_total_time.py  rosbags_analysis.sh  topic.txt
configs/: common_stereo.yaml  zed2i.yaml
src/anonymizer/: package.xml  setup.cfg  setup.py
src/anonymizer/anonymizer/: anonymizer_node.py
src/camera_360/: CMakeLists.txt  package.xml
src/camera_360/include/camera_360/: ricoh_theta_z1.hpp.OLD
src/camera_360/src/: ricoh_theta_z1.cpp  ricoh_theta_z1.cpp copy.old
src/joystick_topic_publisher/: package.xml  setup.cfg  setup.py
src/joystick_topic_publisher/joystick_topic_publisher/: joystick_topic_node.py
src/sequence_time/: package.xml  setup.cfg  setup.py
src/sequence_time/sequence_time/: sequence_time_node.py
src/shadow/: CMakeLists.txt  package.xml
src/shadow/config/: config_bpearl.yaml  config_helios.yaml  shadow_rviz.rviz  shadow_rviz_compressed.rviz
src/shadow/launch/: shadow.py
src/shadow/meshes/: motor_left.STL  motor_right.STL
src/shadow/urdf/: shadow_description.csv  shadow_description.urdf
src/shadow_base/: package.xml  setup.cfg  setup.py
src/shadow_base/shadow_base/: shadow_base.py
src/tts_package/: package.xml  setup.py
src/tts_package/tts_package/: tts_node.py
utils/: measure_topics_rates.py  rates.csv
